tests/reference/run-ichar_arg_len_runtime-be43591.stderr
semantic error: Unexpected args, Ichar expects (char of length 1) as arguments
 --> tests/errors/ichar_arg_len_runtime.f90:3:12
  |
3 |    print*, ichar(x)
  |            ^^^^^^^^ 
